Closed Bug 1587559 Opened 5 years ago Closed 5 years ago

Fix browser_noopener under fission.

Categories

(Core :: DOM: Navigation, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla71
Fission Milestone M4
Tracking Status
firefox71 --- fixed

People

(Reporter: kmag, Assigned: kmag)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

No description provided.

It doesn't have any useful effect given the way Fission chooses processes, and
complicates the window.open logic in ways that are hard to maintain and cause
problems.

Status: NEW → ASSIGNED
Fission Milestone: --- → M4
Priority: -- → P2
Pushed by maglione.k@gmail.com: https://hg.mozilla.org/integration/autoland/rev/8fac21359ba7 Ignore noopener.newprocess preference under Fission. r=nika
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: