Bug 1587559 - Ignore noopener.newprocess preference under Fission. r=nika

It doesn't have any useful effect given the way Fission chooses processes, and
complicates the window.open logic in ways that are hard to maintain and cause
problems.

Differential Revision: https://phabricator.services.mozilla.com/D48749